[tool.poetry]
name = "htmlviewer"
version = "0.1.1.10"
description = "Table viewer for relational databases, without using HandsOnTable."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
jinja2 = "^2.10"
jupyter = "^1.0"
notebook = "^5.7"

[tool.poetry.dev-dependencies]
